--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "target": "es5",
     "module": "commonjs",
     "lib": [
-      "es6"
+      "es6",
+      "dom",
+      "esnext"
     ],
     "allowJs": true,
     "strict": true,
