--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@graphql-toolkit/schema-merging": "^0.10.7",
     "@graphql-tools/load-files": "^6.3.2",
     "@graphql-tools/merge": "^6.2.14",
+    "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.8",
     "typeorm": "^0.2.32"
