--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.8",
+    "mongoose": "^5.12.10",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "dotenv": "^9.0.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
