--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "@graphql-tools/merge": "^6.2.14",
     "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3",
-    "merge-graphql-schemas": "^1.7.8",
-    "mongoose": "^5.12.10",
-    "typeorm": "^0.2.32"
+    "mongoose": "^5.12.10"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
