--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphql-tools/load-files": "^6.3.2",
     "@graphql-tools/merge": "^6.2.14",
     "axios": "^0.21.1",
+    "graphql-playground-html": "^1.6.22",
     "graphql-yoga": "^1.18.3",
     "mongoose": "^5.12.10"
   },
